test/should_fail/DuplicateMethod.oj

@implementation DuplicateMethod

- (void) foo { }
- (void) foo { }

@end
